--- a/templates/user.xml
+++ b/templates/user.xml
@@ -54,4 +54,11 @@
       <option name="JAVA_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="2^nCases" value="int N = $VALUE$;//-&gt; value &lt;= 11&#10;for (int seq = 0; seq &lt; (1 &lt;&lt; N); seq++) {&#10;    for (int pos = 0; pos &lt; N; pos++) {&#10;        if ((seq &amp; (1 &lt;&lt; pos)) &gt; 0) {&#10;            $END$&#10;        }&#10;    }&#10;}" description="Generates all possible cases with access index" toReformat="true" toShortenFQNames="true">
+    <variable name="VALUE" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_EXPRESSION" value="true" />
+      <option name="JAVA_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
